# nvml-prometheus-exporter

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  nvgpu.cpp  nvgpu.h
